<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="start|center_horizontal"
        android:orientation="vertical"
        android:padding="14dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info"
            android:textSize="20sp"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:layout_marginBottom="8dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/razao_social"
                android:id="@+id/razaoSocial"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/cpf_cnpj"
                android:inputType="number"
                android:id="@+id/cpfCnpj"
                android:digits="0123456789-./"
                app:mask="@{`[000].[000].[000]-[00]`}"
                app:affine="@{`[00].[000].[000]/[0000]-[00]`}" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/endereco"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cidade_uf_row"
            android:orientation="horizontal"
            android:baselineAligned="false"
            android:layout_marginBottom="2dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputCidade"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/cidade"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:hint="@string/cidade"
                    android:inputType="textAutoCorrect" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputUf"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/uf"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:hint="@string/uf"
                    android:inputType="textCapCharacters"
                    android:maxLength="2" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:id="@+id/inputBairro"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/bairro"
                android:inputType="textAutoCorrect"
                android:id="@+id/bairro"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/logradouro"
                android:inputType="textAutoCorrect"
                android:id="@+id/logradouro"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contato"
            android:textSize="20sp"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:id="@+id/email"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/telefone"
                android:inputType="phone"
                android:imeOptions="actionSend"
                android:id="@+id/telefone"
                android:digits="0123456789()- "
                app:mask="@{`([00]) [00000]-[0000]`}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:id="@+id/send_button"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/registrar_cliente" />
    </LinearLayout>
</layout>