<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="cliente"
            type="com.example.core_db.data.Cliente" />
        <variable
            name="editado"
            type="boolean" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start|center_horizontal"
            android:orientation="vertical"
            android:padding="14dp" >

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/razaoSocial"
                    android:hint="@string/razao_social"
                    android:text="@{cliente.razaoSocial}"
                    tools:text="@string/razao_social" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/cpf_cnpj"
                    android:inputType="none"
                    android:text="@{cliente.clienteCpfCnpj}"
                    tools:text="000.000.000-00" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/endereco"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/cidade_uf_row"
                android:orientation="horizontal"
                android:baselineAligned="false"
                android:layout_marginBottom="2dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputCidade"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/cidade"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/cidade"
                        android:inputType="textAutoCorrect"
                        android:text="@{cliente.cidade}"
                        tools:text="Campo Grande" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputUf"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/uf"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/uf"
                        android:inputType="textCapCharacters"
                        android:maxLength="2"
                        android:text="@{cliente.uf}"
                        tools:text="MS" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:id="@+id/inputBairro"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/bairro"
                    android:inputType="textAutoCorrect"
                    android:id="@+id/bairro"
                    android:text="@{cliente.bairro}"
                    tools:text="Água Limpa Park" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/logradouro"
                    android:inputType="textAutoCorrect"
                    android:id="@+id/logradouro"
                    android:text="@{cliente.logradouro}"
                    tools:text="Avenida Onélia Zaparoli Testa"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contato"
                android:textSize="20sp"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:id="@+id/email"
                    android:text="@{cliente.email}"
                    tools:text="exemplo@dominio.com.br" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/telefone"
                    android:inputType="phone"
                    android:imeOptions="actionSend"
                    android:id="@+id/telefone"
                    android:digits="0123456789()- "
                    app:mask="@{`([00]) [00000]-[0000]`}"
                    android:text="@{cliente.telefone}"
                    tools:text="(99) 99999-9999"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/confirmar"
            app:isGone="@{editado}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            android:contentDescription="@string/registrar_cliente"
            app:srcCompat="@drawable/ic_check"/>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>