<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="cliente"
            type="com.example.core_db.data.Cliente" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:text="@string/info"
            android:layout_marginBottom="6dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{`Razão Social: ` + cliente.razaoSocial}"
            android:textAppearance="?attr/textAppearanceBody2"
            tools:text="Razão Social: Nome" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{`CPF/CNPJ: ` + cliente.clienteCpfCnpj}"
            android:textAppearance="?attr/textAppearanceBody2"
            tools:text="CPF/CNPJ: 000.000.000-00"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/endereco"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="6dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{cliente.cidade + ` / ` + cliente.uf}"
            android:textAppearance="?attr/textAppearanceBody2"
            tools:text="Campo Grande / MS" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text='@{"Bairro: " + cliente.bairro}'
            android:textAppearance="?attr/textAppearanceBody2"
            tools:text="Bairro: Jardim Noroeste"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text='@{"Logradouro: " + cliente.logradouro}'
            android:textAppearance="?attr/textAppearanceBody2"
            tools:text="Logradouro: Rua Piraputanga"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:text="@string/contato"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="6dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{`E-mail: ` + cliente.email}"
            android:textAppearance="?attr/textAppearanceBody2"
            tools:text="E-mail: exemplo@dominio.com.br" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{`Telefone: ` + cliente.telefone}"
            android:textAppearance="?attr/textAppearanceBody2"
            tools:text="Telefone: (00) 00000-0000" />
    </LinearLayout>
</layout>